tidy-html56 (1:5.6.0-1) unstable; urgency=low

  * New upstream version 5.6.0
  * Remove all patches; they have been merged upstream
  * For detailed changelog with list of authors see: http://binaries.html-tidy.org/release_notes/5.6.0.html
  * Package renamed to tidy-html56 avoid breaking system default "tidy", which may be already installed.
  
 -- Robert Spiegel <nightingale7@gmail.com>  Thu, 13 Sep 2018 08:00:00 +0200


tidy-html5 (1:5.2.0-2) unstable; urgency=low

  * Team upload.

  [ Jason Thomas ]
  * Add define for TIDY_CONFIG_FILE & TIDY_USER_CONFIG_FILE (Closes: #830066)
  * Remove debian/tidy.1 and use tidy.1 built from source

  [ Steve Langasek ]
  * Drop dependency on libdmalloc-dev to a Suggests:, not actually used without
    an extra #define. (Closes: #829147)

  [ Daniel James ]
  * Update copyright notice after clarification with upstream
  * Remove obsolete instructions for building tarballs from CVS
  * Improve package descriptions in control file (Closes: #429582,
    Closes: #829182)
  * Copy upstream changelog to standard location (Closes: #355042,
    Closes: #461655)
  * Add machine-readable copyright file crediting University of Toronto
  * Reinstate Jason Thomas as maintainer.

  [ Pino Toscano ]
  * Backport upstream commit 27143cc88e1d7cda7f08bdc4d78ce68dabf7575c to fix
    build on non-Linux architectures; patch
    upstream_Set-HAS_FUTIME-0-on-any-GNU-libc-platform.patch. (Closes: #828632)
  * Backport upstream commit 10281040ca6b3a54db7880eed9c67957d11622eb to avoid
    crashing in tidyCleanAndRepair if document was not loaded; patch
    upstream_Avoid-crash-in-tidyCleanAndRepair-if-document-was-no.patch.

  [ Mattia Rizzolo ]
  * d/rules: wrap long line.
  * d/rules: enable parallel building

 -- Daniel James <daniel@64studio.com>  Thu, 04 Aug 2016 09:55:19 +0000

tidy-html5 (1:5.2.0-1.1) unstable; urgency=medium

  [ Gianfranco Costamagna ]
  * Install all headers to /usr/include/tidy/ to unbreak abiword