@@ -2,6 +2,7 @@
 <project version="4">
   <component name="VcsDirectoryMappings">
     <mapping directory="$PROJECT_DIR$" vcs="Git" />
+    <mapping directory="$PROJECT_DIR$/build-tidy-html5/launchpad-recipe" vcs="Git" />
     <mapping directory="$PROJECT_DIR$/build-tidy-html56/launchpad-recipe" vcs="Git" />
   </component>
 </project>
